--- a/src/components/ReservationPlan/ReservationPlan.html
+++ b/src/components/ReservationPlan/ReservationPlan.html
@@ -9,34 +9,34 @@
   <!-- I1 to I10 Row -->
   <div class="row justify-content-center mb-3 g-2">
     <div class="col-auto" @click="navigateToReservation('I1')">
-      <div class="ReservationPlan-box p-3 text-center">I1</div>
+      <div :class="['ReservationPlan-box', getTableColor('I1')]" class="p-3 text-center">I1</div>
     </div>
     <div class="col-auto" @click="navigateToReservation('I2')">
-      <div class="ReservationPlan-box p-3 text-center">I2</div>
+      <div :class="['ReservationPlan-box', getTableColor('I2')]" class="p-3 text-center">I2</div>
     </div>
     <div class="col-auto" @click="navigateToReservation('I3')">
-      <div class="ReservationPlan-box p-3 text-center">I3</div>
+      <div :class="['ReservationPlan-box', getTableColor('I3')]" class="p-3 text-center">I3</div>
     </div>
     <div class="col-auto" @click="navigateToReservation('I4')">
-      <div class="ReservationPlan-box p-3 text-center">I4</div>
+      <div :class="['ReservationPlan-box', getTableColor('I4')]" class="p-3 text-center">I4</div>
     </div>
     <div class="col-auto" @click="navigateToReservation('I5')">
-      <div class="ReservationPlan-box p-3 text-center">I5</div>
+      <div :class="['ReservationPlan-box', getTableColor('I5')]" class="p-3 text-center">I5</div>
     </div>
     <div class="col-auto" @click="navigateToReservation('I6')">
-      <div class="ReservationPlan-box p-3 text-center">I6</div>
+      <div :class="['ReservationPlan-box', getTableColor('I6')]" class="p-3 text-center">I6</div>
     </div>
     <div class="col-auto" @click="navigateToReservation('I7')">
-      <div class="ReservationPlan-box p-3 text-center">I7</div>
+      <div :class="['ReservationPlan-box', getTableColor('I7')]" class="p-3 text-center">I7</div>
     </div>
     <div class="col-auto" @click="navigateToReservation('I8')">
-      <div class="ReservationPlan-box p-3 text-center">I8</div>
+      <div :class="['ReservationPlan-box', getTableColor('I8')]" class="p-3 text-center">I8</div>
     </div>
     <div class="col-auto" @click="navigateToReservation('I9')">
-      <div class="ReservationPlan-box p-3 text-center">I9</div>
+      <div :class="['ReservationPlan-box', getTableColor('I9')]" class="p-3 text-center">I9</div>
     </div>
     <div class="col-auto" @click="navigateToReservation('I10')">
-      <div class="ReservationPlan-box p-3 text-center">I10</div>
+      <div :class="['ReservationPlan-box', getTableColor('I10')]" class="p-3 text-center">I10</div>
     </div>
   </div>
 
@@ -50,34 +50,34 @@
   <!-- S1 to S10 Row -->
   <div class="row justify-content-between mb-3 g-1">
     <div class="col-auto" @click="navigateToReservation('S1')">
-      <div class="ReservationPlan-box p-2 text-center">S1</div>
+      <div :class="['ReservationPlan-box', getTableColor('S1')]" class="p-2 text-center">S1</div>
     </div>
     <div class="col-auto" @click="navigateToReservation('S2')">
-      <div class="ReservationPlan-box p-3 text-center">S2</div>
+      <div :class="['ReservationPlan-box', getTableColor('S2')]" class="p-3 text-center">S2</div>
     </div>
     <div class="col-auto" @click="navigateToReservation('S3')">
-      <div class="ReservationPlan-box p-3 text-center">S3</div>
+      <div :class="['ReservationPlan-box', getTableColor('S3')]" class="p-3 text-center">S3</div>
     </div>
     <div class="col-auto" @click="navigateToReservation('S4')">
-      <div class="ReservationPlan-box p-3 text-center">S4</div>
+      <div :class="['ReservationPlan-box', getTableColor('S4')]" class="p-3 text-center">S4</div>
     </div>
     <div class="col-auto" @click="navigateToReservation('S5')">
-      <div class="ReservationPlan-box p-3 text-center">S5</div>
+      <div :class="['ReservationPlan-box', getTableColor('S5')]" class="p-3 text-center">S5</div>
     </div>
     <div class="col-auto" @click="navigateToReservation('S6')">
-      <div class="ReservationPlan-box p-3 text-center">S6</div>
+      <div :class="['ReservationPlan-box', getTableColor('S6')]" class="p-3 text-center">S6</div>
     </div>
     <div class="col-auto" @click="navigateToReservation('S7')">
-      <div class="ReservationPlan-box p-3 text-center">S7</div>
+      <div :class="['ReservationPlan-box', getTableColor('S7')]" class="p-3 text-center">S7</div>
     </div>
     <div class="col-auto" @click="navigateToReservation('S8')">
-      <div class="ReservationPlan-box p-3 text-center">S8</div>
+      <div :class="['ReservationPlan-box', getTableColor('S8')]" class="p-3 text-center">S8</div>
     </div>
     <div class="col-auto" @click="navigateToReservation('S9')">
-      <div class="ReservationPlan-box p-3 text-center">S9</div>
+      <div :class="['ReservationPlan-box', getTableColor('S9')]" class="p-3 text-center">S9</div>
     </div>
     <div class="col-auto" @click="navigateToReservation('S10')">
-      <div class="ReservationPlan-box p-2 text-center">S10</div>
+      <div :class="['ReservationPlan-box', getTableColor('S10')]" class="p-2 text-center">S10</div>
     </div>
   </div>
 
@@ -96,37 +96,37 @@
   <!-- G1 to G10 Row -->
   <div class="row justify-content-between mb-3 g-1">
     <div class="col-auto" @click="navigateToReservation('G1')">
-      <div class="ReservationPlan-box p-2 text-center">G1</div>
+      <div :class="['ReservationPlan-box', getTableColor('G1')]" class="p-2 text-center">G1</div>
     </div>
     <div class="col-auto" @click="navigateToReservation('G2')">
-      <div class="ReservationPlan-box p-3 text-center">G2</div>
+      <div :class="['ReservationPlan-box', getTableColor('G2')]" class="p-3 text-center">G2</div>
     </div>
     <div class="col-auto" @click="navigateToReservation('G3')">
-      <div class="ReservationPlan-box p-3 text-center">G3</div>
+      <div :class="['ReservationPlan-box', getTableColor('G3')]" class="p-3 text-center">G3</div>
     </div>
     <div class="col-auto" @click="navigateToReservation('G4')">
-      <div class="ReservationPlan-box p-3 text-center">G4</div>
+      <div :class="['ReservationPlan-box', getTableColor('G4')]" class="p-3 text-center">G4</div>
     </div>
     <div class="col-auto" @click="navigateToReservation('G5')">
-      <div class="ReservationPlan-box p-3 text-center">G5</div>
+      <div :class="['ReservationPlan-box', getTableColor('G5')]" class="p-3 text-center">G5</div>
     </div>
     <div class="col-auto" @click="navigateToReservation('G6')">
-      <div class="ReservationPlan-box p-3 text-center">G6</div>
+      <div :class="['ReservationPlan-box', getTableColor('G6')]" class="p-3 text-center">G6</div>
     </div>
     <div class="col-auto" @click="navigateToReservation('G7')">
-      <div class="ReservationPlan-box p-3 text-center">G7</div>
+      <div :class="['ReservationPlan-box', getTableColor('G7')]" class="p-3 text-center">G7</div>
     </div>
     <div class="col-auto" @click="navigateToReservation('G8')">
-      <div class="ReservationPlan-box p-3 text-center">G8</div>
+      <div :class="['ReservationPlan-box', getTableColor('G8')]" class="p-3 text-center">G8</div>
     </div>
     <div class="col-auto" @click="navigateToReservation('G9')">
-      <div class="ReservationPlan-box p-3 text-center">G9</div>
+      <div :class="['ReservationPlan-box', getTableColor('G9')]" class="p-3 text-center">G9</div>
     </div>
     <div class="col-auto" @click="navigateToReservation('G10')">
-      <div class="ReservationPlan-box p-2 text-center">G10</div>
+      <div :class="['ReservationPlan-box', getTableColor('G10')]" class="p-2 text-center">G10</div>
     </div>
   </div>
-</div>  
+</div>
 
 <br>
 <div class="row justify-content-center mb-3">
@@ -135,24 +135,27 @@
   </div>
 </div>
 
-  <!-- Reservation Pop-up -->
-  <ReservationPopUp
-    v-if="showPopup"
-    :showPopup="showPopup"
-    :reservation="currentReservation"
-    @close="closePopup"
-    @update="updateReservation"
-    @cancel="cancelReservation"
-    @create="createNewReservation"
-  />
-
+<!-- Reservation Pop-up -->
+<ReservationPopUp
+  v-if="showPopup"
+  :showPopup="showPopup"
+  :reservations="currentReservations"
+  :selectedReservation="selectedReservation"
+  :selectedTable="selectedTable"
+  @close="closePopup"
+  @update="updateReservation"
+  @cancel="cancelReservation"
+  @create="createNewReservation"
+  @select="selectReservation"
+/>
 
 <br><br><br><br>
 <div class="row justify-content-center mb-3">
   <div class="col-12 text-center">
     <ul class="list-unstyled">
-      <li class="mb-3"><button class="btn btn-primary btn-lg w-100" @click="navigateToMain" v-if="!isEditing">Ana sayfaya dön</button></li>
+      <li class="mb-3">
+        <button class="btn btn-primary btn-lg w-100" @click="navigateToMain" v-if="!isEditing">Ana sayfaya dön</button>
+      </li>
     </ul>
   </div>
 </div>
-
