--- a/src/components/ReservationPlan/ReservationPlan.css
+++ b/src/components/ReservationPlan/ReservationPlan.css
@@ -1,10 +1,12 @@
-.ReservationPlan {
-  /* CSS  */
-}
-
 .ReservationPlan-box {
   background-color: #36486b; /* Lacivert renk */
   color: white; /* Metin rengi */
 }
 
-  
+.table-red {
+  background-color: red !important;
+}
+
+.table-orange {
+  background-color: orange !important;
+}
